--- a/Prosjekter/prosjekter.css
+++ b/Prosjekter/prosjekter.css
@@ -257,13 +257,13 @@ nav {
     border: 2px solid black;
     width: 500px;
     height: 500px;
-    background-color:  rgb(254, 191, 214);
+    background-color: lightpink;
     display: block;
     margin: auto;
     position: relative;
 }
 
-#ball img {
+#ball {
     width: 100px;
     position: absolute;
     bottom: 0;
@@ -300,7 +300,7 @@ nav {
 }
 
 
-/*Ballsprett med canvas---------*/
+/*Tilfeldig kort---------*/
 .overskriftKort {
     text-align: center;
     font-size: 50px;
