--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ a {
 nav {
     padding-left: 50px;
     padding-right: 50px;
-    padding-top: 15px;
+    padding-top: 20px;
 
 }
 
@@ -50,6 +50,7 @@ nav {
 /*!-- ANIMATION ----------------------------------------*/
 /*-- typewriter -- src=https://css-tricks.com/snippets/css/typewriter-effect/ ----*/
 .typewriter h1 {
+    font-family: Chakra Petch;
     overflow: hidden;
     /* Ensures the content is not revealed until the animation */
     border-right: .15em solid rgb(222, 70, 149);
@@ -104,8 +105,6 @@ nav {
 }
 
 
-
-
 .banner2-1 {
     display: flex;
     flex-direction: column;
@@ -153,6 +152,10 @@ nav {
     width: 100%;
 }
 
+.whiteSvgpil {
+    padding-top: 200px;
+}
+
 #arrowBtn {
     cursor: pointer;
 }
@@ -164,6 +167,9 @@ nav {
     display: flex;
     bottom: 0;
     margin: 0;
+}
+.svg180 {
+    transform: rotate(180deg);
 }
 
 .prosjektdiv {
@@ -200,6 +206,7 @@ nav {
     width: 250px;
     height: 200px;
     margin-top: 2%;
+    padding-top: 20px;
     border-radius: 10px;
     border: rgb(85, 52, 75) 1px solid;
     box-shadow: 2px 4px rgb(53, 14, 34);
@@ -222,31 +229,235 @@ nav {
     height: 100px;
     width: 100px;
     border-radius: 5px;
+    margin-top: 20px;
 }
 
 
 
 /*!KOMPETANSEMÅL I IT1----------------------------------------------------------*/
 
+#kompetansemaal {
+    padding-bottom: 200px;
+}
+
 .kompetansemal_os {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 40px;
 }
+
 .kompetansemal_os h2 {
     font-size: 30px;
 }
+
 .kompetansemal_os p {
     padding-bottom: 70px;
 }
 
 .kompetansemal_li {
     padding-left: 100px;
+    padding-bottom: 150px;
     font-size: 20px;
-    padding-bottom: 200px;
 }
+
 .kompetansemal_li li {
     padding: 10px;
+}
+
+#kompMaalUl {
+    padding-bottom: 100px;
+}
+
+
+/*!PROSENTANDEL----------------------------------------------------------*/
+.prosentdiv {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(255, 142, 184);
+    width: 100%;
+    height: 800px;
+    margin-bottom: 8%;
+    border-bottom: 4mm ridge rgba(156, 68, 121, 0.6);
+}
+
+.nr2 {
+    margin-bottom: 0;
+    border-bottom: none;
+}
+
+#prosentOverskrift {
+    margin-bottom: 5%;
+}
+
+#prosentOverskrift h1 {
+    font-family: Poppins, sans-serif;
+    padding-bottom: 15px;
+    padding-top: 200px;
+    text-align: center;
+}
+
+
+#info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 10%;
+    padding-left: 0%;
+}
+.infobox h3{
+    font-family: Chakra Petch;
+    color: rgb(146, 33, 100);
+}
+.infobox p{
+    font-family: Poppins, sans-serif;
+}
+
+.prosentAndel {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin-bottom: 20%;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/*	Skill Bars ---------------------------------------*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Poppins, sans-serif;
+}
+
+.prosentAndel h2 {
+    font-family: Chakra Petch;
+}
+
+.prosentAndel-bar {
+    width: 600px;
+}
+
+.prosentAndel-bar .bar {
+    margin: 20px 0px;
+}
+
+.prosentAndel-bar .bar:first-child {
+    margin-top: 0px;
+}
+
+.prosentAndel-bar .bar .info {
+    margin-bottom: 5px;
+}
+
+.prosentAndel-bar .bar .info span {
+    font-size: 17px;
+    font-weight: 500;
+    opacity: 0;
+    animation: showText 0.5s 1.5s linear forwards;
+}
+
+@keyframes showText {
+    100% {
+        opacity: 1;
+    }
+}
+
+.prosentAndel-bar .bar .progresjonslinje {
+    position: relative;
+    height: 10px;
+    width: 100%;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    transform: scaleX(0);
+    transform-origin: left;
+    box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.05), 0px 1px rgba(255, 255, 255, 0.8);
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+.bar .progresjonslinje span {
+    height: 100%;
+    width: 80%;
+    background: black;
+    position: absolute;
+    border-radius: 10px;
+    transform: scaleX(0);
+    transform-origin: left;
+    animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+@keyframes animate {
+    100% {
+        transform: scaleX(1);
+    }
+
+}
+
+.progresjonslinje.html span {
+    width: 75%;
+}
+
+
+.progresjonslinje.css span {
+    width: 80%;
+}
+
+.progresjonslinje.js span {
+    width: 35%;
+}
+
+
+
+.bar .progresjonslinje span::before {
+    position: absolute;
+    content: "";
+    right: 0;
+    top: -10px;
+    height: 0;
+    width: 0;
+    border: 7px solid transparent;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    border-top-color: #000;
+    opacity: 0;
+    animation: showText2 0.5s 1.5s linear forwards;
+
+}
+
+
+
+.bar .progresjonslinje span::after {
+    position: absolute;
+    right: 0;
+    top: -28px;
+    background: #000;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 1px 8px;
+    border-radius: 3px;
+    opacity: 0;
+    animation: showText2 0.5s 1.5s linear forwards;
+}
+
+@keyframes showText2 {
+    100% {
+        opacity: 1;
+    }
+}
+
+.progresjonslinje.html span::after {
+    content: "65,3%";
+}
+
+.progresjonslinje.css span::after {
+    content: "22,2%";
+}
+
+.progresjonslinje.js span::after {
+    content: "12,5%";
 }
 
 
@@ -298,6 +509,7 @@ nav {
 
 .spm {
     padding-top: 0;
+    padding-bottom: 50px;
     margin-top: 0;
     text-align: center;
 }
@@ -312,9 +524,10 @@ nav {
 
 .spmdiv {
     padding-top: 0;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     margin-top: 0;
 }
+
 .spmdiv button {
     margin: 8px;
 }
@@ -344,6 +557,7 @@ nav {
     padding: 15px;
     font-size: 20px;
 }
+
 
 
 
